[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/al.gd" type="Script" id=1]
[ext_resource path="res://music/Immanuel.mp3" type="AudioStream" id=2]
[ext_resource path="res://art/characters/Al_glitch4_dark.png" type="Texture" id=3]
[ext_resource path="res://art/characters/Al_glitch3_dark.png" type="Texture" id=4]
[ext_resource path="res://Sounds/Laugh Women.tres" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.027451, 0.027451, 0.027451, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.027451, 0.027451, 0.027451, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.152941, 0.152941, 0.152941, 1 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 2732, 2048 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AudioManager" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 2 )

[node name="CreepyLaugh" type="AudioStreamPlayer" parent="AudioManager"]
stream = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1910.0
margin_bottom = 1070.0
custom_constants/separation = 10

[node name="PanelContainer" type="PanelContainer" parent="Background/HBoxContainer"]
margin_right = 945.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background/HBoxContainer"]
margin_left = 955.0
margin_right = 1900.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="PanelContainer3" type="PanelContainer" parent="Background/HBoxContainer/VBoxContainer"]
margin_right = 945.0
margin_bottom = 708.9
rect_min_size = Vector2( 496, 708.9 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="PanelContainer4" type="PanelContainer" parent="Background/HBoxContainer/VBoxContainer"]
margin_top = 718.0
margin_right = 945.0
margin_bottom = 1060.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="AIGlitch1" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )

[node name="AIGlitch2" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 6 )

[node name="BlackoutScreen" type="PanelContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
